# shopIt_Ecommerce_django

./: README.md
shopit/: db.sqlite3  pyproject.toml  requirements.txt
shopit/app/: admin.py  forms.py  models.py  urls.py  views.py
shopit/app/migrations/: 0001_initial.py
shopit/app/templates/app/: address.html  addtocart.html  base.html  bottomwear.html  checkout.html  customerregistration.html  emptycart.html  home.html  laptop.html  login.html  mobile.html  orders.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  passwordchange.html  passwordchangedone.html  productdetail.html  profile.html  searcheditem.html  topwear.html
shopit/shopit/: asgi.py  settings.py  urls.py  wsgi.py
shopit/staticfiles/app/js/: myscript.js
