[tool.poetry]
name = "shopit"
version = "0.1.0"
description = ""
authors = ["Mahendra dodwariya <mahendradodwariya16032004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
